# CPP-and-OpenGL-practice

./: CMakeLists.txt  ReadMe.md  application.cpp  application.hpp
Chapters/: Introduction.md  Lesson 1.md
include/glad/: glad.h
src/: glad.c
